--- a/index.html
+++ b/index.html
@@ -232,13 +232,17 @@
             </div>
         </section>
 
+
         <section class="ios-card p-6 text-center">
             <h2 class="text-lg font-bold mb-4 text-left">Visitor Footprint</h2>
-            <p class="text-xs text-gray-400 mb-4 text-left">To respect user privacy, only generalized geographical data is displayed.</p>
-            <div class="flex justify-center overflow-hidden rounded-xl">
-                <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=tt&d=YOUR_UNIQUE_ID&co=f5f5f7&cmo=3b82f6&cmn=ef4444"></script>
+            <p class="text-xs text-gray-400 mb-4 text-left">Service provided by ClustrMaps. Click the Spinning Earth for more details.</p>
+            
+            <div class="max-w-[220px] mx-auto overflow-hidden rounded-xl">
+                <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=VFkYaJhpm-xIVtyU9XVfxLiz6Qtv8PwrYWPbPLnlluk"></script>
             </div>
+
         </section>
+
 
         <footer class="text-center text-xs text-gray-400 mt-12 mb-4">
             <p>&copy; 2026 Yecheng Wang. Crafted with help from Google Gemini 3.1 Pro.</p>
